Fix scrollbar color

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,11 @@ p, h1, h2, h3, h4, h5, h6, ul, dl, dt, dd {
 *::-webkit-scrollbar {
   width: 0.8em;
 }
+
+*::-webkit-scrollbar-track {
+  background-color: #2E2E2E;
+}
+
 *::-webkit-scrollbar-thumb {
   background-color: #4f4f4f;
 }
